test_scripts/errors/multiline_fn_error.stderr
 3 | }
 4 | 
 5 | add(1, 2, 3);
     ^^^^^^^^^^^^
Error: Too many positional args, 1 remaining
